
[B]7.0.7 (2025.01.10)[/B]
- Increased metadata refresh interval.
- Adjusted playback percentages in Progress menus.
- Fixed show menus for skin widgets.
- Fixed absolute menu paging.

[B]7.0.6 (2025.01.07)[/B]
- Fixed episode labels in Arrivals menus.
- Fixed season and show rating dialogs.
- Added background service delay setting.
- Removed notification for canceled searches.
- Fixed search dialog popup on container refresh.
- Added production info to player details.

[B]7.0.5 (2025.01.04)[/B]
- Faster title matching during scraping.
- Fewer aliases used during title matching.
- Fixed AllDebrid external resolving.
- Fixed DebridLink external resolving.

[B]7.0.4 (2025.01.02)[/B]
- Various fixes for Windows.
- Replaced IFF function for older SQLite versions.
- Fixed negative timestamp formatting.
- Fixed Trakt lists for skin widgets.

[B]7.0.3 (2024.12.23)[/B]
- Fixed ResolveURL authentication.

[B]7.0.2 (2024.12.20)[/B]
- Fixed reuselanguageinvoker.
- Fixed cache item copy.
- Fixed loading issues on empty menus.

[B]7.0.1 (2024.12.20)[/B]
- Fixed Metadata notifications.
- Fixed setup wizard extensions.
- Fixed scraping optimization.

[B]7.0.0 (2024.12.20)[/B]
- Way too many changes to list them all here.
- Added database compression support.
- Implemented proper Trakt sync activities.
- Improved Trakt history retrieval.
- Improved Trakt progress retrieval.
- Improved Trakt rating retrieval.
- Fixed Trakt show watched list.
- Improved Trakt local lookup times.
- Improved binge process for last episode.
- Fixed dangling playback window.
- Improved rating dialog responsiveness.
- Fixed quick menu loader.
- Added Trakt movie disc releases.
- Improved IMDb batch requests.
- Improved TMDb movie disc releases.
- Improved TMDb season ratings.
- Improved TMDb API calls.
- Retrieve various TMDb release dates.
- Added audio language to list items.
- Added TMDb images for shows.
- Added customizable progress menu.
- Added progress submenus.